Book Recommendation System

--- a/Books Recommendation System - correlation.ipynb
+++ b/Books Recommendation System - correlation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "8a92e975",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "77df8af2",
    "metadata": {},
    "outputs": [
@@ -278,14 +278,14 @@
        "[242135 rows x 8 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "books_df = pd.read_csv(\"BX-Books.csv\", encoding='latin-1', on_bad_lines='skip', sep=';')\n",
-    "books_df = books_df.drop_duplicates(subset=['Book-Title'])\n",
+    "books_df = pd.read_csv(\"BX-Books.csv\", encoding=\"latin-1\", on_bad_lines=\"skip\", sep=\";\")\n",
+    "books_df = books_df.drop_duplicates(subset=[\"Book-Title\"])\n",
     "books_df"
    ]
   },
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "17ce83a7",
    "metadata": {},
    "outputs": [
@@ -418,13 +418,13 @@
        "[278858 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "users_df = pd.read_csv(\"BX-Users.csv\", encoding='latin-1', on_bad_lines='skip', sep=';')\n",
+    "users_df = pd.read_csv(\"BX-Users.csv\", encoding=\"latin-1\", on_bad_lines=\"skip\", sep=\";\")\n",
     "users_df"
    ]
   },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "b53febb3",
    "metadata": {},
    "outputs": [
@@ -557,13 +557,13 @@
        "[1149780 rows x 3 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "books_with_ratings_df = pd.read_csv(\"BX-Book-Ratings.csv\", encoding='latin-1', on_bad_lines='skip', sep=';')\n",
+    "books_with_ratings_df = pd.read_csv(\"BX-Book-Ratings.csv\", encoding=\"latin-1\", on_bad_lines=\"skip\", sep=\";\")\n",
     "books_with_ratings_df"
    ]
   },
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "95930e90",
    "metadata": {},
    "outputs": [
@@ -721,13 +721,13 @@
        "[884153 rows x 4 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "books_ratings_titles_complete_df = books_df.join(books_with_ratings_df.set_index('ISBN'), on='ISBN')\n",
+    "books_ratings_titles_complete_df = books_df.join(books_with_ratings_df.set_index(\"ISBN\"), on=\"ISBN\")\n",
     "books_ratings_titles_complete_df = books_ratings_titles_complete_df.reset_index()\n",
     "books_ratings_titles_complete_df = books_ratings_titles_complete_df.drop(columns=[\"index\", \"Book-Author\", \"Year-Of-Publication\", \"Publisher\", \"Image-URL-S\", \"Image-URL-M\", \"Image-URL-L\"])\n",
     "books_ratings_titles_complete_df"
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "fdb02f3a",
    "metadata": {},
    "outputs": [
@@ -930,16 +930,16 @@
        "Animal Farm                                                    164  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "best_rated_books = pd.DataFrame(books_ratings_titles_complete_df.groupby('Book-Title')['Book-Rating'].median())\n",
-    "best_rated_books['num_of_ratings'] = pd.DataFrame(books_ratings_titles_complete_df.groupby('Book-Title')['Book-Rating'].count())\n",
+    "best_rated_books = pd.DataFrame(books_ratings_titles_complete_df.groupby(\"Book-Title\")[\"Book-Rating\"].median())\n",
+    "best_rated_books[\"num_of_ratings\"] = pd.DataFrame(books_ratings_titles_complete_df.groupby(\"Book-Title\")[\"Book-Rating\"].count())\n",
     "best_rated_books = best_rated_books[best_rated_books.num_of_ratings > 70]\n",
-    "best_rated_books = pd.DataFrame(best_rated_books.sort_values('Book-Rating',ascending=False).head(20))\n",
+    "best_rated_books = pd.DataFrame(best_rated_books.sort_values(\"Book-Rating\",ascending=False).head(20))\n",
     "best_rated_books"
    ]
   },
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "0879a5e3",
    "metadata": {},
    "outputs": [
@@ -1080,14 +1080,14 @@
        "[1054 rows x 2 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ratings = pd.DataFrame(books_ratings_titles_complete_df.groupby('Book-Title')['Book-Rating'].mean())\n",
-    "ratings['num_of_ratings'] = pd.DataFrame(books_ratings_titles_complete_df.groupby('Book-Title')['Book-Rating'].count())\n",
+    "ratings = pd.DataFrame(books_ratings_titles_complete_df.groupby(\"Book-Title\")[\"Book-Rating\"].mean())\n",
+    "ratings[\"num_of_ratings\"] = pd.DataFrame(books_ratings_titles_complete_df.groupby(\"Book-Title\")[\"Book-Rating\"].count())\n",
     "ratings = ratings[ratings.num_of_ratings > 70]\n",
     "ratings"
    ]
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "b2a3d59a",
    "metadata": {},
    "outputs": [
@@ -1112,7 +1112,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1131,7 +1131,7 @@
    ],
    "source": [
     "plt.figure(figsize=(15, 5))\n",
-    "ratings['num_of_ratings'].hist(bins=100, legend=True)"
+    "ratings[\"num_of_ratings\"].hist(bins=100, legend=True)"
    ]
   },
   {
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "b275a1ba",
    "metadata": {},
    "outputs": [
@@ -1154,7 +1154,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1173,7 +1173,7 @@
    ],
    "source": [
     "plt.figure(figsize=(15, 5))\n",
-    "ratings['Book-Rating'].hist(bins=100, legend=True)"
+    "ratings[\"Book-Rating\"].hist(bins=100, legend=True)"
    ]
   },
   {
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "47a9cc28",
    "metadata": {
     "scrolled": true
@@ -1195,10 +1195,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.JointGrid at 0x7fa0fe573400>"
+       "<seaborn.axisgrid.JointGrid at 0x7faac10ff730>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1216,7 +1216,7 @@
     }
    ],
    "source": [
-    "sns.jointplot(x='Book-Rating', y='num_of_ratings', data=ratings, alpha=0.5)"
+    "sns.jointplot(x=\"Book-Rating\", y=\"num_of_ratings\", data=ratings, alpha=0.5)"
    ]
   },
   {
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "799c1671",
    "metadata": {},
    "outputs": [
@@ -1375,7 +1375,7 @@
        "[151593 rows x 4 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "9e1e8760",
    "metadata": {},
    "outputs": [
@@ -1882,13 +1882,13 @@
        "[33782 rows x 1054 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "booksmat = books_ratings_titles_df.pivot_table(index='User-ID',columns='Book-Title',values='Book-Rating').fillna(0)\n",
+    "booksmat = books_ratings_titles_df.pivot_table(index=\"User-ID\", columns=\"Book-Title\", values=\"Book-Rating\").fillna(0)\n",
     "booksmat"
    ]
   },
@@ -1902,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "id": "2fd4a831",
    "metadata": {},
    "outputs": [],
@@ -1916,20 +1916,20 @@
     "        \n",
     "        if book_name in books_ratings_titles_df.values:\n",
     "\n",
-    "            print('Recommended books:')\n",
+    "            print(\"Recommended books:\")\n",
     "\n",
     "            book_user_ratings = booksmat[book_name]\n",
     "            similar_to_book = booksmat.corrwith(book_user_ratings)\n",
-    "            corr_book = pd.DataFrame(similar_to_book, columns=['Correlation'])\n",
+    "            corr_book = pd.DataFrame(similar_to_book, columns=[\"Correlation\"])\n",
     "            corr_book.dropna(inplace=True)\n",
     "            corr_book = corr_book[corr_book.Correlation > 0]\n",
-    "            corr_book = corr_book.sort_values(by='Correlation', ascending=False)\n",
+    "            corr_book = corr_book.sort_values(by=\"Correlation\", ascending=False)\n",
     "            print(corr_book.head(21))\n",
     "\n",
     "        else:\n",
     "\n",
     "            print(\"This book has not been sufficiently evaluated yet to recommend similar books.\\nWhy not read some of the best rated books?\")\n",
-    "            print(best_rated_books.drop(columns=['num_of_ratings']))"
+    "            print(best_rated_books.drop(columns=[\"num_of_ratings\"]))"
    ]
   },
   {
@@ -1942,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "id": "53879754",
    "metadata": {},
    "outputs": [
@@ -1991,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "7a8a2c41",
    "metadata": {},
    "outputs": [
@@ -2017,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "id": "1b225db8",
    "metadata": {},
    "outputs": [
